made change to css to avoid overlapping of offerings

--- a/css/style.css
+++ b/css/style.css
@@ -739,8 +739,8 @@ a:focus {
 .class .class-item {
     position: relative;
     margin-bottom: 30px;
-    /* overflow: hidden;
-    transition: .3s; */
+    overflow: hidden;
+    transition: .3s;
 }
 
 .class .class-wrap {
@@ -760,7 +760,7 @@ a:focus {
 }
 
 .class .class-text {
-    /* position: relative; */
+    position: relative;
     padding: 30px 30px 25px 30px;
     border-right: 1px solid rgba(0, 0, 0, .07);
     border-bottom: 1px solid rgba(0, 0, 0, .07);
